Fix z-index of elements near search, fix line-height of titles in item description

--- a/app/assets/stylesheets/elements/_filter.scss
+++ b/app/assets/stylesheets/elements/_filter.scss
@@ -1,10 +1,12 @@
 .filter {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   flex-wrap: wrap;
   margin-top: 1rem;
   font-size: $font-size-base;
+  z-index: 10;
 
   @include media-min(sm) {
     font-size: 18px;
