--- a/app/assets/stylesheets/wiki/_breadcrumbs.scss
+++ b/app/assets/stylesheets/wiki/_breadcrumbs.scss
@@ -1,10 +1,12 @@
 .breadcrumbs {
+  position: relative;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   margin-top: $margin / 4;
   font-size: 14px;
   line-height: 1.5em;
+  z-index: 10;
 
   a,
   span {
